<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="5dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Get info"
        android:id="@+id/infoS" />

    <TextView
        android:id="@+id/WhatSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/infoS"
        android:layout_marginBottom="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"
        android:text="@string/WhatSize"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/shortSize"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/WhatSize"
        android:text="@string/Short"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/tall"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/WhatSize"
        android:layout_toRightOf="@id/shortSize"
        android:text="@string/Tall"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/grande"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tall"
        android:layout_below="@+id/WhatSize"
        android:text="@string/Grande"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/venti"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/grande"
        android:layout_below="@+id/WhatSize"
        android:text="@string/Venti"
        android:textColor="@color/white" />


</RelativeLayout>