<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:padding="5dp">

    <TextView
        android:id="@+id/typePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"

        android:layout_marginTop="20dp"
        android:text="@string/EnterType"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/enterType"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/typePrompt"
        android:inputType="text" />

    <TextView
        android:id="@+id/amountPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/typePrompt"
        android:layout_alignBottom="@+id/typePrompt"
        android:layout_alignParentRight="true"
        android:text="@string/CaffPer"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/enterAmount"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/amountPrompt"
        android:layout_below="@+id/amountPrompt"

        android:inputType="numberDecimal">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enterType"
        android:layout_below="@+id/enterType"
        android:layout_marginTop="19dp"
        android:text="@string/Category"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/enterNewType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:text="@string/Enter"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/deleteType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_toLeftOf="@+id/enterNewType"
        android:text="@string/Delete"
        android:textColor="@color/white" />

    <Spinner
        android:id="@+id/editDrinkSpinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@id/enterNewType"
        android:layout_toLeftOf="@+id/deleteType" />

</RelativeLayout>