<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="270dp"
    android:background="@drawable/certificate_template"
    android:padding="5dp">

    <TextView
        android:id="@+id/congratuations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/Congratulations"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/lengthUnder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/congratuations"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lengthUnder"
        android:layout_centerHorizontal="true"
        android:text="You are a caffeine Superhero!"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <Button
        android:id="@+id/thanks"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="25dp"
        android:layout_marginRight="20dp"
        android:text="@string/Thanks"
        android:textColor="@color/black" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/thanks"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:text="@string/DisableRewards"
        android:textColor="@color/black"
        android:textSize="10dp" />

</RelativeLayout>